# vcvrack-rs

./: .cursorrules  .gitignore  .windsurfrules  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
src/app/: mod.rs  vcvrack_app.rs
src/models/: plugin.rs
src/tests/: change_indicator_tests.rs  gui_tests.rs  mod.rs  plugin_tests.rs  startup_tests.rs  vcvrack_app_tests.rs  window_title_tests.rs
