[package]
name = "vcvrack-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"   # Updated to latest stable version
egui = "0.30.0"     # Updated to match eframe version
resvg = "0.44.0"
tiny-skia = "0.11.4"
usvg = "0.44.0"

[target.'cfg(windows)'.dependencies]
windows = "0.51"

[alias]
# Run tests with coverage instrumentation
test-coverage = "llvm-cov --html"
# Run tests and watch for changes
test-watch = "watch -x test"
# Build with optimizations
build-release = "build --release"
# Format code
fmt = "fmt --all"
# Check code formatting
fmt-check = "fmt --all -- --check"
# Run clippy lints
lint = "clippy -- -D warnings"