[package]
name = "vcvrack-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"   # Updated to latest stable version
egui = "0.30.0"     # Updated to match eframe version
raw-window-handle = "0.6"
resvg = "0.44.0"
tiny-skia = "0.11.4"
usvg = "0.44.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

[target.'cfg(windows)'.dependencies]
windows = "0.51"
